--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,4 +1,5 @@
 _repo: Die-von-denen-Faunen-gepeitschte-Laster_2947
+_version: 0.1.0
 creator:
   author:
     agent_name: Zäunemann, Sidonia Hedwig
