--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Die-von-denen-Faunen-gepeitschte-Laster_2947
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Zäunemann, Sidonia Hedwig
@@ -13,6 +16,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/1072
     wikipedia: http://de.wikipedia.org/wiki/Sidonia_Hedwig_Z%C3%A4unemann
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/2947#Die-von-denen-Faunen-gepeitschte-Laster
 gutenberg_bookshelf: DE Lyrik
 gutenberg_issued: '2001-12-01'
 gutenberg_type: Text
