--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: Die-von-denen-Faunen-gepeitschte-Laster_2947
-_version: 0.2.0
+_version: 0.2.1
 covers:
 - cover_type: generated
   image_path: cover.png
@@ -30,5 +30,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'German poetry -- 18th century'
 - !lcc 'PT'
+- GITenberg
 title: Die von denen Faunen gepeitschte Laster
 url: http://www.gutenberg.org/ebooks/2947
